--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,13 +27,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto1_OLC1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.java-cup-11a.jar=C:\\Users\\fabia\\Desktop\\LIBRERIAS NETBEANS\\java-cup-11a.jar
-file.reference.JFlex.jar=C:\\Users\\fabia\\Desktop\\LIBRERIAS NETBEANS\\JFlex.jar
+file.reference.itext-5.0.1.jar=lib\\itext-5.0.1.jar
+file.reference.java-cup-11a.jar=lib\\java-cup-11a.jar
+file.reference.java_cup.jar=lib\\java_cup.jar
+file.reference.JFlex.jar=lib\\JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JFlex.jar}:\
-    ${file.reference.java-cup-11a.jar}
+    ${file.reference.itext-5.0.1.jar}:\
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.java_cup.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
