--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ file.reference.itext-5.0.1.jar=lib\\itext-5.0.1.jar
 file.reference.java-cup-11a.jar=lib\\java-cup-11a.jar
 file.reference.java_cup.jar=lib\\java_cup.jar
 file.reference.JFlex.jar=lib\\JFlex.jar
+file.reference.json-20211205.jar=lib\\json-20211205.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.JFlex.jar}:\
     ${file.reference.itext-5.0.1.jar}:\
     ${file.reference.java-cup-11a.jar}:\
-    ${file.reference.java_cup.jar}
+    ${file.reference.java_cup.jar}:\
+    ${file.reference.json-20211205.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
